# index.js
@@ -9,6 +9,8 @@ app.use(require('body-parser').json());
 app.use(require('body-parser').urlencoded());
 
 app.use('/api/v1/user', require('./src/UserRouter'));
+app.use('/api/v1/vpn', require('./src/VpnRouter'));
+
 app.use('/', swaggerUi.serve, swaggerUi.setup(require('yamljs').load('./api-docs.swagger.v1.yaml')));
 
 const SERVER_PORT = 3002;
